# chaotic-carbon-networks

./: .gitignore  Cargo.toml  README.md  pyproject.toml  viz-data.py
chaotic_carbon_networks/: __init__.py  adjencency_matrix.py  anomaly_correction.py  download.py  full_analysis.py  hex.py  main.py  masks.py  matrix.py  measures.py  population_masking.py  preprocessing.py  rust_chaotic_carbon_networks.pyi  utils.py  viz.py
chaotic_carbon_networks/analysis/: __init__.py  double.py  single.py
chaotic_carbon_networks/matrix/: __init__.py  gen.py  measures.py
data/aqua-airs/: download.py
notebooks/: degrees.ipynb  hex.ipynb  mind.ipynb  satellite_co2.ipynb
src/: lapend.rs  lib.rs  mind.rs
