[package]
name = "chaotic-carbon-networks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chaotic_carbon_networks"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
numpy = "0.20"
ndarray = { version = "0.15.6", features = ["rayon"] }
rayon = "1.9.0"
