[tool.poetry]
name = "chaotic-carbon-networks"
version = "0.1.0"
description = ""
authors = ["Tobias Hölzer <tobiashoelzer@hotmail.com>"]
readme = "README.md"
packages = [{ include = "chaotic_carbon_networks" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
xarray = "^2024.2.0"
rioxarray = "^0.15.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
rich = "^13.7.1"
cartopy = "^0.22.0"
geopandas = "^0.14.3"
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
netcdf4 = "^1.6.5"
h5netcdf = "^1.3.0"
regionmask = "^0.11.0"
scipy = "^1.12.0"
pyqt5 = "5.15.2"
requests = "^2.31.0"
tqdm = "^4.66.2"
dask = "^2024.3.1"
h3 = "^3.7.7"
numba = "^0.59.1"
lovely-numpy = "^0.2.11"
networkx = "^3.2.1"
scikit-learn = "^1.4.1.post1"
fast-histogram = "^0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
